--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "vue-cli-plugin-vuetify": "^0.5.0",
     "vue-template-compiler": "^2.5.21",
     "vue-timeago": "^5.0.0"
+  },
+  "engines": {
+    "node": "10.24.1",
+    "npm": "6.14.12"
   }
 }
